# preexec_confirm

./: Cargo.toml  README.md
docs/: demo.webm
src/: lib.rs  main.rs
tests/: confirm.rs  preexec_confirm.rs
