[package]
name = "preexec_confirm"
version = "0.1.0"
authors = ["Tu Mai tu.mai@outlook.com"]
license = "MIT License"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/anhtumai/preexec_confirm"
repository = "https://github.com/anhtumai/preexec_confirm"
keywords = ["zsh hook", "preexec", "confirm"]
categories = ["zsh-preexec-hook"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
colored = "2"
rand = "*"
regex = "1"
